Using lombock as expected for services and controllers.